k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: skubestore-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: skubestore-stage
