k8s/internal-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  namespace: skubestore-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod # Use the issuer you're using for certificates
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true" # Redirect HTTP to HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ingress-nginx-controller.ingress-nginx.svc.cluster.local # Use the FQDN of your ingress service
      secretName: ingress-nginx-tls # Secret to store the TLS certificate
  rules:
    - host: ingress-nginx-controller.ingress-nginx.svc.cluster.local # Use the FQDN
      http:
        paths:
          - pathType: Prefix
            path: "/register"
            backend:
              service:
                name: user-service
                port:
                  number: 5000
          - pathType: Prefix
            path: "/login"
            backend:
              service:
                name: user-service
                port:
                  number: 5000
          - pathType: Prefix
            path: "/products"
            backend:
              service:
                name: product-service
                port:
                  number: 5000
          - pathType: Prefix
            path: "/orders"
            backend:
              service:
                name: order-service
                port:
                  number: 5000
